--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-fastapi
-uvicorn
-python-multipart
-boto3
-python-dotenv
-opencv-python
-matplotlib
-pillow
-numpy 
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+boto3==1.34.0
+python-dotenv==1.0.0
+matplotlib==3.8.2
+Pillow==10.1.0
+numpy==1.24.3
+opencv-python==4.8.1.78
+# OpenPose dependencies
+mediapipe==0.10.7
+tensorflow==2.15.0 
